# PerceiveReason_Apple_M5

./: .gitignore  LICENSE  Makefile  README.md  bench.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: README.md  project.yml
app/PerceiveReason/: ContentView.swift  PerceiveReasonApp.swift  PerceiveReasonViewModel.swift
app/PerceiveReason/Perception/: VisionPerceptor.swift
app/PerceiveReason/Reasoning/: ClaudeReasoner.swift  OnDeviceReasoner.swift  ReasoningProvider.swift
docs/: ARCHITECTURE.md  CONVERSION.md  DEPLOYMENT.md  WWDC2026.md
pipeline/: README.md  __init__.py  __main__.py  cli.py  config.py
pipeline/coreml_convert/: __init__.py  convert.py  inspect_model.py  optimize.py
pipeline/examples/: __init__.py  run_demo.py
pipeline/reasoning/: __init__.py  language_model.py  perceive_reason.py  prompts.py
pipeline/reasoning/providers/: __init__.py  claude_provider.py  mock_provider.py
tests/: test_convert.py  test_optimize.py  test_reasoning.py
